--- a/content/early-access.html
+++ b/content/early-access.html
@@ -15,80 +15,9 @@ type: basic
        large sized organizations and groups. If that is you, then please
        <a href="/contact">contact us instead</a>.</p>
 
-    <div class="break"></div>
-    <form name="testing" netlify>
-      <label class="bold">1. <b>What should we call you?</b></label><br>
-      You can use your alias or real name.
-      <input type="name" required class="text-field" placeholder="Resonano">
-      <div class="break"></div>
-      <label class="bold">2. <b>How old are you?</b></label><br>
-      Please use your real age.
-      <input type="number"required max="100" min="1" step="1" class="text-field number-field" placeholder="19">
-      <div class="break"></div>
-      <label class="bold">3. <b>Where are you from?</b></label><br>
-      If you live in a country which uses more than 2 time zones, be more specifc.
-      <input type="text" required class="text-field" placeholder="New York, US">
-      <div class="break"></div>
-      <label class="bold">4. <b>What is your gender?</b></label><br>
-      <select required>
-        <option>Female</option>
-        <option>Male</option>
-        <option>Other</option>
-      </select>
-      <div class="break"></div>
-      <label class="bold">5. <b>What is your Discord name#tag?</b></label><br>
-      Do not forget to add the last 4 digits after your name.
-      <input type="text" required class="text-field" placeholder="Reso#6156">
-      <div class="break"></div>
-      <label class="bold">6. <b>What is your email address?</b></label><br>
-      This email will never be used for marketing or sold to 3rd parties.
-      <input type="email" required class="text-field" placeholder="resothegoodguy@aol.com">
-      <div class="break"></div>
-      <label class="bold">7. <b>Are you a content creator?</b></label><br>
-      <select required>
-        <option>No, I do not need access to creator tools</option>
-        <option>Yes, I need access to creator tools</option>
-      </select>
-      <div class="break"></div>
-      <label class="bold">8. <b>Have you contributed to our open source project?</b></label><br>
-      <select required>
-        <option>No and I do not plan to</option>
-        <option>No and I do not know what that is</option>
-        <option>No but I would if given the chance</option>
-        <option>No but I will make sure to contribute</option>
-        <option>No and I am not sure if I want to contribute</option>
-        <option>Yes but I will not do it again</option>
-        <option>Yes and I plan to do it again</option>
-      </select>
-      <div class="break"></div>
-      <label class="bold">9. <b>Do you plan to continue using Chorale after the beta?</b></label><br>
-      <select required>
-        <option>No, just want to try Chorale now</option>
-        <option>Depends on how Chorale turns out</option>
-        <option>Most likely yes, if a free option is available</option>
-        <option>Most likely yes, with a paid subscription</option>
-        <option>Yes, absolutely, but only for free</option>
-        <option>Yes, absolutely, with a paid subscription</option>
-      </select>
-      <div class="break"></div>
-      <label class="bold">10. <b>Creators &amp; artists, do you plan to continue using Chorale?</b></label><br>
-      <select required>
-        <option>I am not an artist or content creator</option>
-        <option>No, just want to try Chorale now</option>
-        <option>Depends on my view of Chorale</option>
-        <option>Depends on how others react to Chorale</option>
-        <option>Most likely yes, if a free option is available</option>
-        <option>Most likely yes, with a paid subscription</option>
-        <option>Yes, absolutely, but only for free</option>
-        <option>Yes, absolutely, with a paid subscription</option>
-      </select>
-      <div class="break"></div>
-      <label class="bold">(11). <b>Why should we choose you? Feel free to add any extra comments here.</b></label><br>
-      <textarea class="text-field" required placeholder="I am a designer so I can give hints on what looks good or not."></textarea>
-
       <div class="break"></div>
 
-      <button class="btn btn--primary">Submit</button>
+      <a href="https://goo.gl/forms/7TnqL2AOOgcDJWKE2" class="btn btn--primary">Submit form</a>
       <small>expect replies in 24-48h</small>
     </form>
   </div>
