Redesigned and revamped website

--- a/content/creators/index.html
+++ b/content/creators/index.html
@@ -1,7 +1,7 @@
 ---
 title: Hello! | For Creators and Artists
 description: Hello, artists and creators! This is your new home.
-type: basic
+type: wrapped
 ---
 
 <section class="basic-section container center">
