Fixathon: Fix #1, fix #2, fix #3, and misc changes

--- a/content/creators/index.html
+++ b/content/creators/index.html
@@ -1,15 +1,48 @@
 ---
 title: Hello! | For Creators and Artists
 description: Hello, artists and creators! This is your new home.
-type: wrapped
+type: light
 ---
 
-<section class="basic-section container center">
-  <h1 class="h1 bold center"><b>Hello, creators &amp; artists!</b></h1>
-  <p>We are still preparing our guidelines, policies, and other things, but in
-     the meantime, feel free to request access to the platform.</p>
-  <div class="break"></div>
-  <a href="/early-access" class="btn btn--primary">Request access</a>
+<div class="header-cover"></div>
+<!--
+<div class="browse-bar">
+  <div class="container">
+    <mark>Creators</mark>
+  </div>
+</div>
+--->
 
-  <div class="break"></div><div class="break"></div><div class="break"></div>
+<section class="basic-section">
+  <div class="container">
+    <div class="row">
+    <figure class="col">
+    <h1 class="h1 bold">
+      <b>Hello<span class="highlighted">.</span></b><br>
+      What would you like to do?
+    </h1>
+    <p>We love creators! But we do not have<br>much to show you right now. Sorry!</p>
+    <div class="break"></div>
+    <ul class="no-bullet">
+      <li class="h4"><a href="/request-access">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path fill="#000000" d="M7,14A2,2 0 0,1 5,12A2,2 0 0,1 7,10A2,2 0 0,1 9,12A2,2 0 0,1 7,14M12.65,10C11.83,7.67 9.61,6 7,6A6,6 0 0,0 1,12A6,6 0 0,0 7,18C9.61,18 11.83,16.33 12.65,14H17V18H21V14H23V10H12.65Z" />
+        </svg>
+        Register for access</a></li>
+      <li class="h4"><a href="/contact">
+        <svg style="width:24px;height:24px" viewBox="0 0 33 27"><defs><path d="M26.616 36.896l4.289 4.514 3.305-5.385 8.827-1.014L41.544 19.5l-25.507 2.928 1.493 15.511 9.086-1.043z" id="b"/></defs><g transform="translate(-13 -18)" fill="none" fill-rule="evenodd"><use fill="#000" filter="url(#a)" xlink:href="#b"/><use stroke="#FFF" stroke-width="2" fill="#FFF" xlink:href="#b"/></g></svg>
+        Contact us
+      </a></li>
+      <li class="h4"><a href="/privacy">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path fill="#000000" d="M20,6A2,2 0 0,1 22,8V18A2,2 0 0,1 20,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10L12,6H20M19,17V13H18V12A3,3 0 0,0 15,9A3,3 0 0,0 12,12V13H11V17H19M15,11A1,1 0 0,1 16,12V13H14V12A1,1 0 0,1 15,11Z" />
+        </svg>
+        Read the Privacy Policy
+      </a></li>
+    </ul>
+    </figure>
+    <figure class="col">
+    </figure>
+    </div>
+  </div>
 </section>
