--- a/content/legal/terms.html
+++ b/content/legal/terms.html
@@ -11,3 +11,4 @@ type: wrapped
 </div>
 
 <div class="break"></div>
+<p>The documents are still being prepared. Please <a href="/legal/license">refer to the Apache 2.0 license for open source projects</a>.</p>
