--- a/content/pricing.html
+++ b/content/pricing.html
@@ -6,13 +6,15 @@ type: basic
 <main class="container">
 <div class="break"></div><div class="break"></div>
 <h1 class="h1 bold center"><b>Reasonable prices. Great value.</b></h1>
+<p class="bold center">Cheaper than Spotify, more jam-packed than Pandora, and<br>uh, less ridicolous than whatever SoundCloud is doing.</p>
 <div class="break"></div><div class="break"></div>
 
-  <div class="row">
+  <div class="row mobile-row">
     <figure class="col card">
       <div class="card__header center">
         <strong class="highlighted">Free</strong><br>
-        default plan <span class="faded">(never expires)</span>
+        default plan <span class="faded">(never expires)</span> <br>
+        eligible for 2 trials of 2 weeks
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -62,7 +64,8 @@ type: basic
     <figure class="col card card--primary">
       <div class="card__header center">
         <strong>Extra</strong><br>
-        $5<span class="faded">, every month</span>
+        $5<span class="faded">, paid monthly</span> <br>
+        $50<span class="faded">, paid yearly</span> <mark>(save $10)</mark>
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -113,7 +116,8 @@ type: basic
     <figure class="col card card--secondary">
       <div class="card__header center">
         <strong>Premier</strong><br>
-        $10<span class="faded">, every month</span>
+        $10<span class="faded">, paid monthly</span> <br>
+        $100<span class="faded">, paid yearly</span> <mark>(save $20)</mark>
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -159,7 +163,7 @@ type: basic
     </figure>
   </div>
 
-  <div class="break"></div><div class="break"></div>
+  <div class="break"></div><div class="break"></div><div class="break"></div>
 
   <div class="icon-grid row">
     <figure class="col">
