--- a/content/contribute.html
+++ b/content/contribute.html
@@ -11,13 +11,9 @@ type: basic
   <p class="h3 bold center no-upper-margin"><b>Contribute to the Chorale project.</b></p>
   <div class="break"></div>
 
-  <div class="icon-grid row">
+  <div class="icon-grid row mobile-row">
     <figure class="col">
-      <img src="http://i.imgur.com/IUuLTuc.gif" style="height: 100%; width: 100%;">
-      <div class="center">
-        <small>
-          <a href="https://www.reddit.com/r/Design/comments/2khjrd/getting_started_on_a_flat_animation_what_do_you/">animation art by reddit user Jushooter</a></small>
-      </div>
+      <img src="/img/contributing.gif" class="stretch-img">
     </figure>
 
     <figure class="col">
@@ -40,7 +36,7 @@ type: basic
          putting your knowledge to good use.</p>
     </figure>
   </div>
-  <div class="icon-grid row">
+  <div class="icon-grid row mobile-row">
     <figure class="col">
       <svg class="icon-grid__icon" viewBox="0 0 24 24">
         <path fill="#000000" d="M18.65,2.85L19.26,6.71L22.77,8.5L21,12L22.78,15.5L19.24,17.29L18.63,21.15L14.74,20.54L11.97,23.3L9.19,20.5L5.33,21.14L4.71,17.25L1.22,15.47L3,11.97L1.23,8.5L4.74,6.69L5.35,2.86L9.22,3.5L12,0.69L14.77,3.46L18.65,2.85M9.5,7A1.5,1.5 0 0,0 8,8.5A1.5,1.5 0 0,0 9.5,10A1.5,1.5 0 0,0 11,8.5A1.5,1.5 0 0,0 9.5,7M14.5,14A1.5,1.5 0 0,0 13,15.5A1.5,1.5 0 0,0 14.5,17A1.5,1.5 0 0,0 16,15.5A1.5,1.5 0 0,0 14.5,14M8.41,17L17,8.41L15.59,7L7,15.59L8.41,17Z" />
@@ -66,6 +62,8 @@ type: basic
   <div class="center">
     <a href="/contribute#how" class="btn btn--primary">Get involved</a>
     <a href="/contact" class="btn btn--border">Contact us</a>
+    <p><small>
+        <a href="https://www.reddit.com/r/Design/comments/2khjrd/getting_started_on_a_flat_animation_what_do_you/">animation art by reddit user Jushooter</a></small></p>
   </div>
   <div class="break"></div>
 </section>
@@ -80,11 +78,11 @@ type: basic
   <div class="btn-group">
     <a href="#no" class="btn btn--primary">Back-end web development</a>
     <a href="#no" class="btn btn--primary">Animation, illustration, and GFX design</a>
-    <a href="#no" class="btn btn--primary">Storytelling, hype, marketing</a>
-    <a href="#no" class="btn btn--primary">User support (6h a day)</a>
     <a href="#no" class="btn btn--primary">JavaScript mobile app development</a>
     <a href="#no" class="btn btn--primary">Native mobile app development</a>
-    <a href="/contact" class="btn btn--primary">Donations</a>
+    <a href="#no" class="btn btn--secondary">Support &amp; comm management</a>
+    <a href="/contact" class="btn btn--secondary">Donations</a>
+    <a href="#no" class="btn btn--secondary">Storytelling, hype, marketing</a>
     <a href="#no" class="btn btn--secondary">Front-end web development</a>
     <a href="#no" class="btn btn--secondary">Electron desktop development</a>
     <a href="#no" class="btn btn--border">Translations</a>
