--- a/content/contact.html
+++ b/content/contact.html
@@ -59,7 +59,7 @@ type: basic
           margin: 0 auto;
           max-width: 80vh;
         }
-        figure svg {
+        #globe svg {
           display: block;
           margin: 0 auto;
         }
@@ -166,7 +166,7 @@ type: basic
           }
         }
         </style>
-        <figure>
+        <figure id="globe">
           <svg style="height:50vh;width:35vw" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
            x="0" y="0" viewBox="0 0 136 166" xml:space="preserve">
           <ellipse id="shad" cx="68" cy="150" rx="40" ry="10"/>
