--- a/content/contact.html
+++ b/content/contact.html
@@ -8,12 +8,13 @@ type: basic
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="h1 bold"><b>Say hi!</b></b></h1>
-        <p class="h4 bold no-upper-margin">We usually reply in 10 minutes, but in case no one is online, set your email in the chatbox and we’ll get back to you later.</p>
+        <h1 class="h1 bold"><b>Labas. Привет. Greetings!</b></b></h1>
+        <p>Want to use live chat or email us? Use the widget on the bottom right
+           to get in touch with us using our support tool. We’ll get back to you
+           in a few hours or minutes. We are guaranteed to reply between 12:00
+           and 20:00 UTC. <a href="//time.is/UTC">What time that is for me?</a></p>
 
-        <p>Guaranteed to reply between 12:00 and 20:00 UTC.</p>
-
-        <div class="break"></div><div class="break break--half"></div>
+        <div class="break break--half"></div>
         <button onclick="$crisp.push(['do', 'chat:open'])" class="btn btn--primary">
           <svg viewBox="0 0 33 27"><defs><path d="M26.616 36.896l4.289 4.514 3.305-5.385 8.827-1.014L41.544 19.5l-25.507 2.928 1.493 15.511 9.086-1.043z" id="b"/></defs><g transform="translate(-13 -18)" fill="none" fill-rule="evenodd"><use fill="#000" filter="url(#a)" xlink:href="#b"/><use stroke="#FFF" stroke-width="2" fill="#FFF" xlink:href="#b"/></g></svg>
           &nbsp;
@@ -21,7 +22,7 @@ type: basic
         </button>
 
 
-        <p><small class="faded">you could also try to get community help</small></p>
+        <p><small class="faded">or ask the community for help in these places</small></p>
 
         <div class="btn-group">
           <a href="https://discord.io/choraleapp" class="btn btn--border btn--sq">
@@ -29,12 +30,6 @@ type: basic
               <path d="M22,24L16.75,19L17.38,21H4.5A2.5,2.5 0 0,1 2,18.5V3.5A2.5,2.5 0 0,1 4.5,1H19.5A2.5,2.5 0 0,1 22,3.5V24M12,6.8C9.32,6.8 7.44,7.95 7.44,7.95C8.47,7.03 10.27,6.5 10.27,6.5L10.1,6.33C8.41,6.36 6.88,7.53 6.88,7.53C5.16,11.12 5.27,14.22 5.27,14.22C6.67,16.03 8.75,15.9 8.75,15.9L9.46,15C8.21,14.73 7.42,13.62 7.42,13.62C7.42,13.62 9.3,14.9 12,14.9C14.7,14.9 16.58,13.62 16.58,13.62C16.58,13.62 15.79,14.73 14.54,15L15.25,15.9C15.25,15.9 17.33,16.03 18.73,14.22C18.73,14.22 18.84,11.12 17.12,7.53C17.12,7.53 15.59,6.36 13.9,6.33L13.73,6.5C13.73,6.5 15.53,7.03 16.56,7.95C16.56,7.95 14.68,6.8 12,6.8M9.93,10.59C10.58,10.59 11.11,11.16 11.1,11.86C11.1,12.55 10.58,13.13 9.93,13.13C9.29,13.13 8.77,12.55 8.77,11.86C8.77,11.16 9.28,10.59 9.93,10.59M14.1,10.59C14.75,10.59 15.27,11.16 15.27,11.86C15.27,12.55 14.75,13.13 14.1,13.13C13.46,13.13 12.94,12.55 12.94,11.86C12.94,11.16 13.45,10.59 14.1,10.59Z" />
             </svg>
             Discord
-          </a>
-          <a href="https://fb.me/choraleapp" class="btn btn--border btn--sq">
-            <svg viewBox="0 0 24 24">
-              <path d="M17,2V2H17V6H15C14.31,6 14,6.81 14,7.5V10H14L17,10V14H14V22H10V14H7V10H10V6A4,4 0 0,1 14,2H17Z" />
-            </svg>
-            Facebook
           </a>
           <a href="https://twitter.com/choraleapp" class="btn btn--border btn--sq">
             <svg viewBox="0 0 24 24">
