--- a/content/contribute.html
+++ b/content/contribute.html
@@ -73,7 +73,7 @@ type: basic
   <div class="break"></div>
 
   <p>What are you good at? Choose the type of work you want to do.<br>
-  Items in purple are high priority, those in blue are medium priority.<br>
+  Items in pink are high priority, those in purple are medium priority.<br>
   If an item is not highlighted, it is not deemed important.</p>
   <div class="btn-group">
     <a href="#no" class="btn btn--primary">Back-end web development</a>
