--- a/content/early-access.html
+++ b/content/early-access.html
@@ -5,20 +5,56 @@ type: basic
 ---
 
 <div class="basic-section">
-  <div class="container">
+  <div class="container center">
+    <div class="highlighted">
+      <svg class="large-icon" viewBox="0 0 24 24">
+        <path d="M6,22A3,3 0 0,1 3,19C3,18.4 3.18,17.84 3.5,17.37L9,7.81V6A1,1 0 0,1 8,5V4A2,2 0 0,1 10,2H14A2,2 0 0,1 16,4V5A1,1 0 0,1 15,6V7.81L20.5,17.37C20.82,17.84 21,18.4 21,19A3,3 0 0,1 18,22H6M5,19A1,1 0 0,0 6,20H18A1,1 0 0,0 19,19C19,18.79 18.93,18.59 18.82,18.43L16.53,14.47L14,17L8.93,11.93L5.18,18.43C5.07,18.59 5,18.79 5,19M13,10A1,1 0 0,0 12,11A1,1 0 0,0 13,12A1,1 0 0,0 14,11A1,1 0 0,0 13,10Z" />
+      </svg>
+    </div>
+    <div class="break break--half"></div>
     <h1 class="h1 bold"><b>Request early access</b></h1>
-    <p>Early access gives users and creators the abillity to test the
-       platform and the new features. All testers must report bugs if they
-       see them and take their time to give feedback on the app.</p>
+    <p class="h5 bold">Early access gives users and creators the abillity to test the
+       platform and its new features. Testers report bugs and take their time to give hones,t concise feedback at a leisurely pace. Early access is free for everyone 13+.</p>
+
+    <div class="icon-grid center row mobile-row">
+      <figure class="col">
+        <svg class="icon-grid__icon" viewBox="0 0 24 24">
+          <path d="M2,21L23,12L2,3V10L17,12L2,14V21Z" />
+        </svg><div class="break break--half"></div>
+        <h3 class="h4 bold"><b class="highlighted">1.</b> Show us that you are interested</h3>
+        <p>First up, this is the most most difficult part. You have to submit
+        a pretty simple, short, concise form. You submit your details, make
+        sure you have joined our <a href="https://discord.io/choraleapp">Discord chat</a>
+        and then wait for around 24 to 72 hours for a response.</p>
+      </figure>
+      <figure class="col">
+        <svg class="icon-grid__icon" viewBox="0 0 24 24">
+          <path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" />
+        </svg><div class="break break--half"></div>
+        <h3 class="h4 bold"><b class="highlighted">2.</b> Bookmark &amp; pin the desktop web app</h3>
+        <p>Since we are still quite early in the development cycle of Chorale,
+        there is no dedicated desktop app available at this time. We want to perfect
+        the app itself first. To use the app, head over to <a href="https://web.choraleapp.com">web.choraleapp.com</a>! Hopefully you know how to
+        bookmark websites.</p>
+      </figure>
+      <figure class="col">
+        <svg class="icon-grid__icon" viewBox="0 0 24 24">
+          <path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z" />
+        </svg><div class="break break--half"></div>
+        <h3 class="h4 bold"><b class="highlighted">3.</b> Add the mobile app to your homescreen</h3>
+        <p>On Android, download the latest version of Chrome Beta or Dev. Make sure Chrome stays up to date. Visit <a href="https://mobile.choraleapp.com">mobile.choraleapp.com</a>, hit the 3-dot menu and then <em>Add to Homescreen</em>. On iOS use Safari. Visit the URL, click share, and <em>Add to Homescreen</em>.</p>
+      </figure>
+    </div>
+
+    <div class="btn-group">
+      <a href="https://goo.gl/forms/7TnqL2AOOgcDJWKE2" class="btn btn--primary">Take step #1</a>
+      <a href="/contact" class="btn btn--border">Special request</a>
+    </div>
+    <div class="break break--half"></div>
 
     <p>Please note that this application was not made for labels or medium to
-       large sized organizations and groups. If that is you, then please
-       <a href="/contact">contact us instead</a>.</p>
-
-      <div class="break"></div>
-
-      <a href="https://goo.gl/forms/7TnqL2AOOgcDJWKE2" class="btn btn--primary">Submit form</a>
-      <small>expect replies in 24-48h</small>
+       large sized organizations and groups.
+       <a href="/contact">Contact us</a> if that is you.</p>
     </form>
   </div>
 </div>
