--- a/content/pricing.html
+++ b/content/pricing.html
@@ -5,16 +5,26 @@ type: basic
 
 <main class="container">
 <div class="break"></div><div class="break"></div>
-<h1 class="h1 bold center"><b>Reasonable prices. Great value.</b></h1>
-<p class="bold center">Cheaper than Spotify, more jam-packed than Pandora, and<br>uh, less ridicolous than whatever SoundCloud is doing.</p>
+<h1 class="h1 bold center"><b>Everything is free for early access users.</b></h1>
+<p class="bold center">
+  However, even with paid plans, Chorale ends up being cheaper than Spotify,<br>
+  more jam-packed than Pandora, and available in more places than SoundCloud Go+.
+</p>
 <div class="break"></div><div class="break"></div>
 
   <div class="row mobile-row">
     <figure class="col card">
       <div class="card__header center">
-        <strong class="highlighted">Free</strong><br>
-        default plan <span class="faded">(never expires)</span> <br>
-        eligible for 2 trials of 2 weeks
+        <div class="highlighted">
+          <strong>Free</strong>
+        </div>
+        <div>
+          default plan that never expires<br>
+          <div class="ingrained">
+            you can try both plans of the paid
+            plans for a free month of music
+          </div>
+        </div>
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -56,16 +66,23 @@ type: basic
           </li>
         </ul>
       </div>
-      <a href="/order" class="btn">Sign up</a>
+      <a href="/early-access" class="btn">Request early access</a>
     </figure>
 
     <!---->
 
     <figure class="col card card--primary">
       <div class="card__header center">
-        <strong>Extra</strong><br>
-        $5<span class="faded">, paid monthly</span> <br>
-        $50<span class="faded">, paid yearly</span> <mark>(save $10)</mark>
+        <div>
+          <strong>Extra</strong>
+        </div>
+        <div>
+          free for early access users<br>
+          <div class="ingrained">
+            typically $5/mo or $50/yr<br>
+            with a free 14 day trial
+          </div>
+        </div>
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -108,16 +125,23 @@ type: basic
         </ul>
 
       </div>
-      <a href="/order" class="btn btn--primary btn--rough">Start free 14 day trial</a>
+      <a href="/order" class="btn btn--primary btn--rough">Request early free access</a>
     </figure>
 
     <!---->
 
     <figure class="col card card--secondary">
       <div class="card__header center">
-        <strong>Premier</strong><br>
-        $10<span class="faded">, paid monthly</span> <br>
-        $100<span class="faded">, paid yearly</span> <mark>(save $20)</mark>
+        <div>
+          <strong>Premier</strong>
+        </div>
+        <div>
+          free for early access users<br>
+          <div class="ingrained">
+            typically $10/mo or $100/yr<br>
+            with a free 14 day trial
+          </div>
+        </div>
       </div>
       <div class="card__content">
         <ul class="no-bullet">
@@ -159,7 +183,7 @@ type: basic
           </li>
         </ul>
       </div>
-      <a href="/order" class="btn btn--secondary btn--rough">Start free 14 day trial</a>
+      <a href="/order" class="btn btn--secondary btn--rough">Request early free access</a>
     </figure>
   </div>
 
@@ -170,11 +194,11 @@ type: basic
       <svg class="icon-grid__icon" viewBox="0 0 24 24">
         <path d="M16.5,16H8A3,3 0 0,1 5,13A3,3 0 0,1 8,10C8.05,10 8.09,10 8.14,10C8.58,8.28 10.13,7 12,7A4,4 0 0,1 16,11H16.5A2.5,2.5 0 0,1 19,13.5A2.5,2.5 0 0,1 16.5,16M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
       </svg><div class="break break--half"></div>
-      <h3 class="h4 bold">All creators get access to listener plans</h3>
-      <p>Creators can use all features for free! But free user uploads are limited.
-        You can lift the limit by ordering <em>Unlimited+Extra</em> for $15/mo
-        or <em>Unlimited+Premier</em> for $20/mo.</p>
-      <a href="/contact">Contact us</a>
+      <h3 class="h4 bold">All creators get everything for free</h3>
+      <p>Creators can use all features for free! We have an acceptable uploads
+      policy which does limit random users from uploading gigabytes of random,
+      possibly stolen music, though.</p>
+      <a href="/contact">Contact to lift limit</a>
     </figure>
 
     <figure class="col">
@@ -194,7 +218,7 @@ type: basic
       </svg><div class="break break--half"></div>
       <h3 class="h4 bold">Priority support with a $10+ plan</h3>
       <p>If you are paying more than $10 for Chorale each month, by subscribing
-      to Premier+Lossless or similiar plans, then your feature
+      to <em>Premier+Lossless</em> or similiar plans, then your feature
       requests and issues will get marked as urgent.</p>
       <a href="/contact">Contact us</a>
     </figure>
@@ -203,10 +227,11 @@ type: basic
       <svg class="icon-grid__icon" viewBox="0 0 24 24">
         <path d="M17,13H7V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
       </svg><div class="break break--half"></div>
-      <h3 class="h4 bold">No refunds &amp; no discounts</h3>
-      <p>Our payment gateway, Patreon, does not allow refunds. In addition, we
-        do cannot provide discounts, unless you are a developer or contributor. Sorry!</p>
-      <a href="/contact">Contact us</a>
+      <h3 class="h4 bold">No discounts available</h3>
+      <p>At this time, we cannot provide any discounts for groups like students,
+         or from bulk purchases (no family plan). This may change
+         later, but right now we cannot make ends meet.</p>
+      <a href="/contact">Plead case</a>
     </figure>
   </div>
   <div class="break"></div><div class="break"></div>
