--- a/content/tour.html
+++ b/content/tour.html
@@ -3,13 +3,179 @@ title: Feature Tour
 type: basic
 ---
 
-<section class="basic-section library-section" id="explain">
-  <div class="container">
-    <h2 class="h1 bold center"><b>Chorale <em>kills</em> the competition.<br>Just look.</b></h1>
-    <p class="bold center">Compare features between Chorale and other listening apps.
-    <br>On topics like “Listens to feedback”, you can click on the cross for more information.<br>
-    Oh, and one more thing, if we made a mistake, please point it out to us via the chat box!</p>
+<div class="break"></div><div class="break"></div>
 
+<section class="container" id="overview">
+  <div class="container center">
+    <h1 class="h1 bold"><b>This is Chorale, <span class="highlighted">your new favorite music app</span>.</b></h2>
+    <p>The app is completely free to use during closed testing. We
+    are planning on having <a href="/pricing">2 paid plans</a> for features
+    that are not neccesary for everyday tasks but crucial if you want to make listening more fun,
+    get more options in the future.</p>
+
+    <div class="break"></div>
+    <img src="/img/app.png" class="stretch-img" style="box-shadow: 0 2px 4px rgba(0,0,0,0.4)">
+  </div>
+</section>
+
+<div class="break"></div><div class="break"></div>
+
+<section class="container" id="browse">
+  <div class="row mobile-row">
+    <figure class="col container">
+      <h2 class="h2 bold"><b>See <span class="highlighted">what’s new or hot</span>. Listen to specific tracks.</b></h2>
+      <p>Enjoy popular staff playlists for moods, events, etc. Or listen to music
+         popular labels or artists recommends. Filter and then listen to that specific
+         genre or style of music.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        discover fresh, newly uploaded indie music
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        listen to what’s charting and popular by area
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        find what you’re looking for with search &amp; tags
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        enjoy staff-picked or popular user playlists
+      </div>
+    </figure>
+    <figure class="col container">
+      <img src="/img/app-browse.png" class="stretch-img" style="box-shadow: 0 2px 4px rgba(0,0,0,0.4)">
+    </figure>
+  </div>
+</section>
+
+<div class="break"></div><div class="break"></div>
+
+<section class="container" id="customization">
+  <div class="row mobile-row">
+    <figure class="col container">
+      <img src="/img/app-customization.png" class="stretch-img" style="box-shadow: 0 2px 4px rgba(0,0,0,0.4)">
+    </figure>
+    <figure class="col container">
+      <h2 class="h2 bold"><b>A record-breaking amount of <span class="highlighted">customization options</span>.</b></h2>
+      <p>To be fair, other apps, like Spotify, have basically no options, so having theming
+         to begin with won us this round. That really says something about our competition.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        pick a light, dark, or AMOLED theme
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        tweak and move interface elements
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        write fully custom themes with CSS
+      </div>
+    </figure>
+  </div>
+</section>
+
+<div class="break"></div>
+
+<section class="container" id="library">
+  <div class="row mobile-row">
+    <figure class="col container">
+      <h2 class="h2 bold"><b><span class="highlighted">Craft your library</span> the
+        right way, with the right music.</b></h2>
+      <p>Your music library is your digital home. We help you keep it clean &amp;
+      organized, with shelves that are full of stuff you regularly use. We’re like
+      your mother. Just want to help.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        use storage from Dropbox for custom uploads
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        save fan-made mixes, remixes, tracks WIPs
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        block artists, songs, or patterns you hate
+      </div>
+    </figure>
+    <figure class="col container">
+      <h2 class="h2 bold"><b><span class="highlighted">Listen however you want</span>, in whatever way you want.</b></h2>
+      <p>Please note that lossless playback is a paid feature. Lossless files are typically
+      very, very large and require extra server bandwidth, which is obviously pricey for us.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        stream in any quality from 128 to 1441 kbps
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        change playback speed and use remote controls
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        enjoy a dedicated mix skipping &amp; podcast UI
+      </div>
+    </figure>
+  </div>
+</section>
+
+
+<section class="container" id="details">
+  <div class="row mobile-row">
+    <figure class="col container">
+      <h2 class="h2 bold"><b>In the end, <span class="highlighted">the little details</span> are what matter.</b></h2>
+      <p>Your music library is your digital home. We help you keep it clean &amp;
+      organized, with shelves that are full of stuff you regularly use. We’re like
+      your mother. Just want to help.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        mobile apps are ergonomically made for 1-hand use
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        we treasure screen real estate for best viewing
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        you can view previous queue tracks (but not on Spotify)
+      </div>
+    </figure>
+    <figure class="col container">
+      <h2 class="h2 bold"><b><span class="highlighted">Made by passionate humans</span>, not by a for profit company.</b></h2>
+      <p>Do you know what inspired our founder to create Chorale? The absolute lack
+      of respect that companies such as Spotify and Google have shown. We shall not
+      make the same mistakes.</p>
+
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        you can actually contact us thanks to amazing innovation
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        we try to <a href="https://github.com/choraleapp">open source</a> as
+        many of our projects as possible
+      </div>
+      <div>
+        <span class="highlighted">{{< partial "check.html" >}}</span>
+        we are dedicated to serving you, with transparency
+      </div>
+    </figure>
+  </div>
+</section>
+
+
+<section class="basic-section" id="comparision">
+  <div class="container container--narrow">
+    <h2 class="h1 bold center"><b>Chorale kills the competition.<br>Don’t believe us? Look here!</b></h1>
+    <p class="bold center">Compare features between Chorale and other listening apps. On topics like “Listens to feedback”, you can click on the cross for more information. Oh, and one more thing, if we made a mistake, please point it out to us via the chat box!</p>
+  </div>
+  <div class="container">
     <div class="break"></div>
 
     <table class="comparision-table">
@@ -156,28 +322,6 @@ type: basic
         <td><!-- YouTube --> {{< partial "cross.html" >}}</td>
         <td><!-- Play Mu --> {{< partial "cross.html" >}}</td>
       </tr>
-      <tr>
-        <td class="feature feature--last"><span class="bold">&nbsp;</span></td>
-        <td class="chorale last highlighted">
-          <a href="/pricing">View pricing</a>
-        </td>
-        <td class="feature--last"></td>
-        <td class="feature--last"></td>
-        <td class="feature--last"></td>
-        <td class="feature--last"></td>
-      </tr>
     </table>
-
-    <div class="break"></div><div class="break"></div>
-    <div class="center">
-      <h1 class="h1 center">Chorale is still in development.</h1>
-      <p class="center">Bringing you all these awesome features is not easy.<br>It takes
-      time. This is why we have an alpha program so testers can try Chorale.</p>
-      <div class="break"></div>
-
-      <a href="/early-access" class="btn btn--primary">Request access</a>
-      <a href="/creators" class="btn btn--border">I’m a creator</a>
-      <p><small>we usually respond in a day or two</small></p>
-    </div>
   </div>
 </section>
