--- a/content/community.html
+++ b/content/community.html
@@ -12,9 +12,7 @@ type: basic
 
   <div class="break"></div>
 
-  <img data-toggle="snackbar" data-content="<strong>Mantas, 15, Lithuania; Chief.</strong> I work on 80% of the things you see. I cook up most of the ideas, work on the website front to back, etc." data-timeout="125000" src="https://image.crisp.chat/avatar/operator/cadc4207-3c89-4033-a436-8670701b7839/80/?avatar=https%3A%2F%2Fstorage.crisp.chat%2Fusers%2Favatar%2Foperator%2Fcadc4207-3c89-4033-a436-8670701b7839%2Fb7361758-4256-46cf-90f4-435af9c066b0.jpg" class="person">
-
-  <img data-toggle="snackbar" data-content="<strong>Kiril, 15, England; Designer.</strong> Kiril (aka Aistro) frequently gives feedback on the road that Chorale is heading and helps with design work." src="https://image.crisp.chat/avatar/operator/ccded5c6-dbf2-422f-a1f2-26e48ae051ce/240/?1504462961452" class="person">
+  <img data-toggle="snackbar" data-content="<strong>Mantas, Lithuania; Chief.</strong> I work on 80% of the things you see. I cook up most of the ideas, work on the website front to back, etc." data-timeout="125000" src="https://image.crisp.chat/avatar/operator/cadc4207-3c89-4033-a436-8670701b7839/80/?avatar=https%3A%2F%2Fstorage.crisp.chat%2Fusers%2Favatar%2Foperator%2Fcadc4207-3c89-4033-a436-8670701b7839%2Fb7361758-4256-46cf-90f4-435af9c066b0.jpg" class="person">
 
   <img data-toggle="snackbar" data-content="<strong>Magnus, Norway; Designer.</strong> @MagnusLiavag overlooks the branding of Chorale." src="https://pbs.twimg.com/profile_images/904986031610572800/azmeVI1q_400x400.jpg" class="person">
   </div>
