Updated, simpler pricing page design

--- a/content/creators/index.html
+++ b/content/creators/index.html
@@ -19,7 +19,7 @@ type: light
 
     <div class="break-sm"></div>
     <div class="btn-group">
-      <a href="/early-access" class="btn btn--primary">Publish own work</a>
+      <a href="/early-access" class="btn btn--white">Publish own work</a>
       <a href="#hello" class="btn btn--border">Tell me more</a>
     </div>
   </div>
