--- a/content/order.html
+++ b/content/order.html
@@ -1,13 +1,12 @@
 ---
-title: Order Chorale
+title: Order plan
 description: Coming soon!
 type: basic
 ---
 
 <div class="basic-section">
   <div class="container">
-    <h1 class="h1 bold"><b>Chorale is free during beta testing.</b></h1>
-    <p>We may still make changes to the plans. Nothing is set in stone yet.</p>
+    <h1 class="h1 bold"><b>Chorale is free during beta testing and all users can switch between all the 3 plans on demand.</b></h1>
 
       <div class="break"></div>
       <div class="btn-group">
