--- a/content/pricing.html
+++ b/content/pricing.html
@@ -5,185 +5,151 @@ type: basic
 
 <main class="container">
 <div class="break"></div><div class="break"></div>
-<h1 class="h1 bold center"><b>Everything is free for early access users.</b></h1>
-<p class="bold center">
-  However, even with paid plans, Chorale ends up being cheaper than Spotify,<br>
-  more jam-packed than Pandora, and available in more places than SoundCloud Go+.
-</p>
-<div class="break"></div><div class="break"></div>
+<h1 class="h0 bold center"><strong>Fair &amp; reasonable pricing.</strong></h1>
+<p class="bold center">Ready to listen to some music?</p>
+<div class="break"></div>
 
   <div class="row mobile-row">
-    <figure class="col card">
-      <div class="card__header center">
-        <div class="highlighted">
-          <strong>Free</strong>
-        </div>
-        <div>
-          default plan that never expires<br>
-          <div class="ingrained">
-            you can try both plans of the paid
-            plans for a free month of music
-          </div>
-        </div>
+    <figure class="col card card--highlighted">
+      <div class="card__header">
+        <div class="break break-sm"></div>
+        <small class="ingrained caps"><b>Chorale Free</b></small>
+        <div class="break break-sm"></div>
+
+        <h2 class="h1 highlighted">
+          <strong>free</strong> ∞
+        </h2>
+        <p>The basic plan is great for light listeners and makes very little comprimises.</p>
       </div>
-      <div class="card__content">
+        <a href="/early-access" class="btn btn--block btn--border btn--rough btn--no-sides">Try it now</a>
+      <div class="container">
         <ul class="no-bullet">
           <li>
-            {{< partial "check.html" >}}
-            Acceptable ads <a href="https://acceptableads.com/">[?]</a>
+            {{< partial "check.html" >}}&nbsp;
+            Minimal visual-only ads <a href="https://acceptableads.com/">[?]</a>
           </li>
           <li>
-            {{< partial "check.html" >}}
+            {{< partial "check.html" >}}&nbsp;
             Tracks stream at 320 kbps
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Listen from Dropbox/Google Drive
+            {{< partial "check.html" >}}&nbsp;
+            Bring your own music
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Light &amp; dark theme
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            Cannot upload own music
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            Cannot listen without connection
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            No access to visualizer <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            No gestures or keybinds
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
+            {{< partial "check.html" >}}&nbsp;
             Best-effort support
+          </li>
+          <li>
+            {{< partial "cross.html" >}}&nbsp;
+            No offline listening
+          </li>
+          <li>
+            {{< partial "cross.html" >}}&nbsp;
+            Settings are limited
+          </li>
+          <li>
+            {{< partial "cross.html" >}}&nbsp;
+            No visualizer <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
           </li>
         </ul>
       </div>
-      <a href="/early-access" class="btn btn--block">Request early access</a>
     </figure>
 
     <!---->
 
     <figure class="col card card--primary">
-      <div class="card__header center">
-        <div>
-          <strong>Extra</strong>
-        </div>
-        <div>
-          free for early access users<br>
-          <div class="ingrained">
-            typically $5/mo or $50/yr<br>
-            with a free 14 day trial
-          </div>
-        </div>
+      <div class="card__header">
+        <div class="break break-sm"></div>
+        <small class="caps"><b>Chorale Plus</b></small>
+        <div class="break break-sm"></div>
+
+        <h2 class="h1">
+          <strong><sup>$</sup>4</strong>/mo
+        </h2>
+        <p>Most people should choose this plan, that unlocks all settings &amp; hides ads.</p>
       </div>
+      <a href="/order" class="btn btn--block btn--white" disabled><em>Coming in 2018</em></a>
       <div class="card__content">
         <ul class="no-bullet">
           <li>
-            {{< partial "check.html" >}}
-            Banner &amp; footer ads
+            {{< partial "check.html" >}}&nbsp;
+            No ads whatsoever
           </li>
           <li>
-            {{< partial "check.html" >}}
+            {{< partial "check.html" >}}&nbsp;
             Tracks stream at 320 kbps
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Listen from Dropbox/Google Drive
+            {{< partial "check.html" >}}&nbsp;
+            Bring your own music
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Light, dark, and AMOLED theme
+            {{< partial "check.html" >}}&nbsp;
+            Private <a href="https://discord.io/choraleapp">chat</a>, regular support
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Gestures &amp; keybinds
+            {{< partial "check.html" >}}&nbsp;
+            Listen without connection
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Private <a href="https://discord.io/choraleapp">chat</a>, standard support
+            {{< partial "check.html" >}}&nbsp;
+            All settings unlocked
           </li>
           <li>
-            {{< partial "cross.html" >}}
-            Cannot upload own music
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            Cannot listen without connection
-          </li>
-          <li>
-            {{< partial "cross.html" >}}
-            No access to visualizer <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
+            {{< partial "cross.html" >}}&nbsp;
+            No visualizer <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
           </li>
         </ul>
-
       </div>
-      <a href="/order" class="btn btn--primary btn--rough btn--block">Request early free access</a>
     </figure>
 
     <!---->
 
     <figure class="col card card--secondary">
-      <div class="card__header center">
-        <div>
-          <strong>Premier</strong>
-        </div>
-        <div>
-          free for early access users<br>
-          <div class="ingrained">
-            typically $10/mo or $100/yr<br>
-            with a free 14 day trial
-          </div>
-        </div>
+      <div class="card__header">
+        <div class="break break-sm"></div>
+        <small class="caps"><b>Chorale Plus Lossless</b></small>
+        <div class="break break-sm"></div>
+
+        <h2 class="h1">
+          <strong><sup>$</sup>8</strong>/mo
+        </h2>
+        <p>This plan, for power users and audiophiles, has lossless (circa 1441 kbps) playback.</p>
       </div>
+        <a href="/order" class="btn btn--block btn--white" disabled><em>Coming in 2018</em></a>
       <div class="card__content">
         <ul class="no-bullet">
           <li>
-            {{< partial "check.html" >}}
-            No ads
+            {{< partial "check.html" >}}&nbsp;
+            No ads whatsoever
           </li>
           <li>
-            {{< partial "check.html" >}}
+            {{< partial "check.html" >}}&nbsp;
             Tracks stream at 320 kbps
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Upload 10 GB of your own music
+            {{< partial "check.html" >}}&nbsp;
+            Bring your own music
           </li>
           <li>
-            {{< partial "check.html" >}}
+            {{< partial "check.html" >}}&nbsp;
+            Private <a href="https://discord.io/choraleapp">chat</a>, prioritized support
+          </li>
+          <li>
+            {{< partial "check.html" >}}&nbsp;
             Listen without connection
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Listen from Dropbox/Google Drive
+            {{< partial "check.html" >}}&nbsp;
+            All settings unlocked
           </li>
           <li>
-            {{< partial "check.html" >}}
-            Auto switch themes, based on time
-          </li>
-          <li>
-            {{< partial "check.html" >}}
-            Gestures &amp; keybinds
-          </li>
-          <li>
-            {{< partial "check.html" >}}
-            Access to visualizer <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
-          </li>
-          <li>
-            {{< partial "check.html" >}}
-            Private <a href="https://discord.io/choraleapp">chat</a>, priority support
+            {{< partial "check.html" >}}&nbsp;
+            Access to visualizer <em>(beta)</em> <a href="https://www.google.com/search?q=linear%20music%20visualizer%20images">[?]</a>
           </li>
         </ul>
       </div>
-      <a href="/order" class="btn btn--secondary btn--rough btn--block">Request early free access</a>
     </figure>
   </div>
 
@@ -203,35 +169,13 @@ type: basic
 
     <figure class="col">
       <svg class="icon-grid__icon" viewBox="0 0 24 24">
-        <path d="M16,9V7H12V12.5C11.58,12.19 11.07,12 10.5,12A2.5,2.5 0 0,0 8,14.5A2.5,2.5 0 0,0 10.5,17A2.5,2.5 0 0,0 13,14.5V9H16M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" />
-      </svg><div class="break-sm"></div>
-      <h3 class="h4 bold">Upgrade to a lossless streaming quality</h3>
-      <p>Choose the Extra or Premier plan and enable lossless 1441 kbps streaming.
-      The <em>Extra+Lossless</em> plan is $8/mo and <em>Premier+Lossless</em> is $12/mo.</p>
-      <a href="/order">Order paid plan</a>
-    </figure>
-  </div>
-  <div class="icon-grid row">
-    <figure class="col">
-      <svg class="icon-grid__icon" viewBox="0 0 24 24">
-        <path d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-      </svg><div class="break-sm"></div>
-      <h3 class="h4 bold">Priority support with a $10+ plan</h3>
-      <p>If you are paying more than $10 for Chorale each month, by subscribing
-      to <em>Premier+Lossless</em> or similiar plans, then your feature
-      requests and issues will get marked as urgent.</p>
-      <a href="/contact">Contact us</a>
-    </figure>
-
-    <figure class="col">
-      <svg class="icon-grid__icon" viewBox="0 0 24 24">
         <path d="M17,13H7V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
       </svg><div class="break-sm"></div>
       <h3 class="h4 bold">No discounts available</h3>
       <p>At this time, we cannot provide any discounts for groups like students,
-         or from bulk purchases (no family plan). This may change
-         later, but right now we cannot make ends meet.</p>
-      <a href="/contact">Plead case</a>
+         or from bulk purchases (no family plan). This is most likely not going
+         to change.</p>
+      <a href="/contact">Contact us</a>
     </figure>
   </div>
   <div class="break"></div><div class="break"></div>
